--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "animate.css": "^3.5.2",
-    "bulma": "^0.4.0"
+    "bulma": "^0.4.0",
+    "es6-promise": "^4.1.0"
   }
 }
